2012-10-29  Adam Barth  <abarth@webkit.org>

        Block SVG external references pending a security review
        https://bugs.webkit.org/show_bug.cgi?id=100635

        Reviewed by Eric Seidel.

        We need to do a security review of loading external SVG references
        before we're sure that it is safe.

        * wtf/Platform.h:

2012-10-29  Michael Saboff  <msaboff@apple.com>

        String::split(UChar, Vector<String>&) shouldn't create a temporary String
        https://bugs.webkit.org/show_bug.cgi?id=100578

        Reviewed by Anders Carlsson.

        Changed split(UChar, Vector<String>&) to call split(UChar, bool, Vector<String>&) instead of creating a
        string and calling the split(String,...) version and moved it to WTFString.h.  Also moved
        split(const String& separator, Vector<String>& result) to WTFString.h.

        * wtf/text/WTFString.cpp:
        (WTF::String::split):
        * wtf/text/WTFString.h:
        (WTF::String::split):

2012-10-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r132736.
        http://trac.webkit.org/changeset/132736
        https://bugs.webkit.org/show_bug.cgi?id=100652

        It broke all plugin related tests on GTK and on Qt (Requested
        by Ossy on #webkit).

        * wtf/text/WTFString.cpp:
        (WTF::String::fromUTF8):

2012-10-27  Michael Saboff  <msaboff@apple.com>

        Try to create AtomicString as 8 bit where possible
        https://bugs.webkit.org/show_bug.cgi?id=100575

        Reviewed by Oliver Hunt.

        Added StringImpl::create8BitIfPossible() that first tries to create an 8 bit string.  If it finds a 16 bit character
        during processing, it calls the standard create() method.  The assumption is that this will be used on mostly 8 bit
        strings and ones that are shorter (in the tens of characters).  Changed AtomicString to use the new creation method
        for UChar based construction.
